--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="favicon.ico">
   <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <meta name="author" content="862443046">
 
-  <title>John Doe - Business Administration</title>
+  <title>Sophia Avenido - Business Administration</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">John Doe</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/sophiaavenido.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Sophia Avenido
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
         <p class="lead mb-4">Enter bio here<br><br>
 
-        Enter bio here<br><br>
+        Was club president for high school's dance club. Taught different types of dances ranging from various styles. Watched different dance performaces and shows. Led activities where club members can choreograph their own dances.<br><br>
 
-        Enter bio here
+        Was a youth group leader and director for 5 years. Learned how to manage different types of teams ranging from different ages and backgrounds. I organized different types of events such as youth groups, socials, and retreats for middle schoolers and high schoolers. 
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.instagram.com/sophia.venido/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/sophiaahavenido">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/iamanetra">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:saven011@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -95,9 +95,10 @@
             <h3 class="mb-0">Developer</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • leader and director for st. augustine youth group<br> 
+              • leader for our lady of mercy youth ministry<br>
+              • leader for st. andrew youth group
+              • president for dance club<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -156,32 +157,9 @@
             <div>MBA in International Business</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2023 - June 2027</span>
           </div>
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
-
       </div>
     </section>
 
@@ -191,7 +169,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="2ndYear.jpg" width="500px">
+            <img src="SYR.jpg" width="500px"><br>
+            <img src="AFG.jpg" width="500px">
+            <img src="DirectorMeeting.jpg" width="500px"><br>
         </center>
       </div>
     </section>
